# rag-arena-2026

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  main.py  pyproject.toml
backend/app/: __init__.py  config.py  main.py  models.py  redis_client.py  tier_profiles.py
backend/app/db/: database.py  models.py
backend/app/routes/: chat.py  compare.py  config.py  docs.py  runs.py  settings.py  stream.py
backend/app/services/: embeddings.py  openrouter.py  pipeline.py  runtime_models.py  runtime_settings.py  semantic_cache.py  streaming.py
backend/app/services/ingestion/: chunkers.py  langextract.py  parsers.py  pipeline.py
backend/app/services/reranking/: local_llamacpp.py
backend/app/services/retrieval_v2/: search.py  store.py
backend/app/utils/: sample_corpus.py
backend/samples/: README.md
backend/scripts/: start-backend-with-reranker.sh
backend/tests/: test_docling_parser.py  test_document_registry.py  test_local_reranker.py  test_runtime_models.py  test_tier_taxonomy.py
docs/: rag-tier-workflows.md
docs/superpowers/specs/: 2026-03-11-model-and-doc-lifecycle-design.md
frontend/: .dockerignore  .gitignore  Dockerfile  index.html  nginx.conf  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/hooks/: useChat.ts  useCompare.ts  useSSE.ts  useTierCatalog.ts
frontend/src/lib/: api.ts  constants.ts
frontend/src/pages/: SettingsPage.tsx
frontend/src/stores/: chatStore.ts  compareStore.ts  docsStore.ts  tierProfilesStore.ts  uiStore.ts
(+15 files in other folders)
