[project]
name = "rag-arena-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.22.1",
    "chromadb>=1.5.2",
    "fastapi>=0.135.1",
    "flagembedding>=1.3.5",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pypdf>=6.7.5",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.22",
    "redis>=7.2.1",
    "rq>=2.7.0",
    "sqlalchemy>=2.0.48",
    "sse-starlette>=3.3.2",
    "unstructured-client>=0.42.10",
    "uvicorn[standard]>=0.41.0",
]
